# Hyperspectral-imaging-lab

./: README.md  platformio.ini
C++/: CMakeLists.txt  README.md  easy_image.cpp  medium_image.cpp  startup.cpp
C++/include/: HBase.h  HConst.h  HErrorDef.h  HMacro.h  HProto.h  HVersNum.h  HalconCDefs.h
C++/include/halconc/: Hvector.h
C++/include/halconcpp/: HBarCode.h  HBarrier.h  HBeadInspectionModel.h  HBgEsti.h  HCalibData.h  HCamPar.h  HCameraSetupModel.h  HClassBox.h  HClassGmm.h  HClassKnn.h  HClassLUT.h  HClassMlp.h  HClassSvm.h  HClassTrainData.h  HColorTransLUT.h  HComponentModel.h  HComponentTraining.h  HComputeDevice.h  HCondition.h  HDataCode2D.h  HDeformableModel.h  HDeformableSurfaceMatchingResult.h  HDeformableSurfaceModel.h  HDescriptorModel.h  HDict.h  HDlClassifier.h  HDlClassifierResult.h  HDlClassifierTrainResult.h  HDlDevice.h  HDlLayer.h  HDlModel.h  HDlModelCounting.h  HDlModelOcr.h  HDlPrune.h  HDrawingObject.h  HDualQuaternion.h  HEncryptedItem.h  HEvent.h  HFeatureSet.h  HFile.h  (+65 more)
C++/include/hlib/: CORE1.h
C++/lib/x64-win64/: halcon.lib  halconc.lib  halconcxl.lib  halconxl.lib  hdevenginecpp.lib  hdevenginecppxl.lib
HDevelop/: README.md  hyperspectral_image_acquistion.hdev  inspect pixels.hdev  model_training.hdev  tiff.hdev
Lab/: Arduino_Project-12-1-2025.code-workspace  README.md  platformio.ini
Lab/lib/Display/: Display.cpp
Lab/src/: main.cpp
Python/: readme.md  requirements.txt
lib/Display/: Display.cpp  Display.h
lib/Motor/: Motor.cpp  Motor.h
lib/SelectorSwitch/: SelectorSwitch.cpp  SelectorSwitch.h
src/: main.cpp
(+2 files in other folders)
